--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Happy Birthday, Lana! 🎂💖</title>
+  <title>Happy Birthday, Mama Soso! 🎂💖</title>
   <style>
     :root{
       --bg:#fff7fb; /* soft pink */
@@ -139,18 +139,19 @@
   <main>
     
       <section class="card" aria-labelledby="fromme">
-        <h2 id="fromme">From your bestie 💌</h2>
+        <h2 id="fromme">From your daughter Yara 💌</h2>
         <p>
-            Happy birthday to my beautiful best friend! Thank you for always being you, and for all the joy and memories we've shared. 
+          Happy Birthday to my amazing mom! You’re the heart of our family, and I’m so grateful for all the love, laughter, and memories we share. 
             
         </p>
+        <p>Wishing you the happiest day—you deserve it all.</p>
         <p>
             I hope your day is as bright and wonderful as you are. You deserve all the happiness in the world!
         </p>
         <p>
-            I love you so much lana  💖
+            I love you so much  💖
         </p>
-        <p style="font-weight:700">— with love 💖</p>
+        <p style="font-weight:700">— with love Yara 💖</p>
       </section>
       <section class="card" aria-labelledby="bouquet-title">
         <h2 id="bouquet-title">A bouquet just for you 💐</h2>
@@ -197,7 +198,7 @@
 
       <section class="card" aria-labelledby="wishboard">
         <h2 id="wishboard">Make a wish board 📝</h2>
-        <p style="margin-top:-4px">Type your wish for Lana (It floats around!)</p>
+        <p style="margin-top:-4px">Type your wish for Soso (It floats around!)</p>
         <div class="controls" style="margin-bottom:10px">
           <input id="wishInput" class="note" placeholder="Write a sweet wish…" maxlength="120" />
           <button class="btn" id="addWish">Pin Wish 🌟</button>
