--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
 
   <header>
-    <h1 class="typewriter" id="title">Happy Birthday, Lana! 🎉💐</h1>
+    <h1 class="typewriter" id="title">Happy Birthday, Mama Soso! 🎉💐</h1>
     <p class="subtitle">Wishing you a day filled with happiness and love ✨</p>
   </header>
 
@@ -218,7 +218,7 @@
   <!-- Surprise modal -->
   <div class="overlay" id="overlay" role="dialog" aria-modal="true" aria-labelledby="surpriseTitle">
     <div class="pop">
-      <h3 id="surpriseTitle">🎂 Make a wish, Lana!</h3>
+      <h3 id="surpriseTitle">🎂 Make a wish, Soso!</h3>
       <p>On three… 1… 2… 3… ✨</p>
       <div class="controls" style="margin-top:10px">
         <button class="btn" id="blowCandles">Blow the candles 🎉</button>
